feat: add button

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             placeholder="Comment here"
           ></textarea>
         </section>
+        <!-- BUTTON -->
+        <section class="orm_section__button">
+          <input type="button" value="Send" />
+        </section>
       </form>
     </main>
   </body>
