style: add margin between input

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <!-- AREA-SELECT -->
         <section class="form_section">
-          <label class="form_section__label" for="area">What are would you like?</label>
+          <label class="form_section__label" for="area">What area would you like?</label>
           <select class="form_section__select" name="area" id="area">
             <option value="salon">Salon</option>
             <option value="garden">Garden</option>
