--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Andes Restaurant</title>
   </head>
   <body>
-    <main class="main">
       <!-- MAIN -->
+      <main class="main"></main>
       <!-- HEADER -->
       <header class="header">
         <div class="header_container">
