style: add hover and focus

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <section class="form_section">
           <label class="form_section__label" for="area">What area would you like?</label>
           <select class="form_section__select" name="area" id="area">
+            <option disabled selected value="">Areas</option>
             <option value="salon">Salon</option>
             <option value="garden">Garden</option>
             <option value="terrace">Terrace</option>
