style: remove images, change quality background

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet" />
     <title>Andes Restaurant</title>
   </head>
@@ -12,15 +16,9 @@
     <main class="main">
       <!-- HEADER -->
       <header class="header">
-        <div class="header_container">
-          <h1 class="header__title">Andes Restaurant</h1>
-          <span class="header__span">by Catena Zapata</span>
-        </div>
+        <h1 class="header__title">Andes Restaurant</h1>
+        <span class="header__span">by Catena Zapata</span>
       </header>
-      <!-- IMAGE -->
-      <figure class="img-contain">
-        <img class="img-contain__image" src="images/plate.jpg" alt="food" />
-      </figure>
       <!-- FORM -->
       <form class="form" action="">
         <!-- NAME -->
