--- a/index.html
+++ b/index.html
@@ -21,20 +21,61 @@
       </header>
       <!-- FORM -->
       <form class="form" action="">
-        <!-- NAME -->
-        <section class="form_section">
-          <label class="form_section__label" for="name">Name</label>
-          <input class="form_section__input" type="text" name="name" id="name" />
-        </section>
+        <!-- LEFT SIDE -->
+        <div class="container-right">
+          <!-- NAME -->
+          <section class="form_section">
+            <label class="form_section__label" for="name">Name</label>
+            <input class="form_section__input" type="text" name="name" id="name" />
+          </section>
+          <!-- AGE -->
+          <section class="form_section">
+            <label class="form_section__label" class="form_section__label" for="age">Age</label>
+            <input class="form_section__input" type="number" name="age" id="age" />
+          </section>
+          <!-- VEGETARIAN-RADIO -->
+          <section class="form_section">
+            <label class="form_section__label">Are you vegetarian?</label>
+
+            <div class="container-radio">
+              <input type="radio" name="vegetarian" id="yes" value="yes" />
+              <label for="yes">Yes</label>
+            </div>
+            <div class="container-radio">
+              <input type="radio" name="vegetarian" id="no" value="no" />
+              <label for="no">No</label>
+            </div>
+          </section>
+          <!-- VARIETY-CHECKBOX -->
+          <section class="form_section">
+            <label class="form_section__label">Choose your favourites varieties</label>
+            <div class="container-check">
+              <input type="checkbox" name="variety" id="variety" value="malbcec" />
+              <label for="variety">Malbcec</label>
+            </div>
+            <div class="container-check">
+              <input type="checkbox" name="variety" id="variety" value="cabernet" />
+              <label for="variety">Cabernet Sauvignon</label>
+            </div>
+            <div class="container-check">
+              <input type="checkbox" name="variety" id="variety" value="syrah" />
+              <label for="variety">Syrah</label>
+            </div>
+            <div class="container-check">
+              <input type="checkbox" name="variety" id="variety" value="merlot" />
+              <label for="variety">Merlot</label>
+            </div>
+            <div class="container-check">
+              <input type="checkbox" name="variety" id="variety" value="chardonnay" />
+              <label for="variety">Chardonnay</label>
+            </div>
+          </section>
+        </div>
+        <!-- RIGHT SIDE -->
         <!-- EMAIL -->
         <section class="form_section">
           <label class="form_section__label" for="email">Email</label>
           <input class="form_section__input" type="email" name="email" id="email" />
-        </section>
-        <!-- AGE -->
-        <section class="form_section">
-          <label class="form_section__label" class="form_section__label" for="age">Age</label>
-          <input class="form_section__input" type="number" name="age" id="age" />
         </section>
         <!-- AREA-SELECT -->
         <section class="form_section">
@@ -45,43 +86,6 @@
             <option value="garden">Garden</option>
             <option value="terrace">Terrace</option>
           </select>
-        </section>
-        <!-- VEGETARIAN-RADIO -->
-        <section class="form_section">
-          <label class="form_section__label">Are you vegetarian?</label>
-
-          <div class="container-radio">
-            <input type="radio" name="vegetarian" id="yes" value="yes" />
-            <label for="yes">Yes</label>
-          </div>
-          <div class="container-radio">
-            <input type="radio" name="vegetarian" id="no" value="no" />
-            <label for="no">No</label>
-          </div>
-        </section>
-        <!-- VARIETY-CHECKBOX -->
-        <section class="form_section">
-          <label class="form_section__label">Choose your favourites varieties</label>
-          <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="malbcec" />
-            <label for="variety">Malbcec</label>
-          </div>
-          <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="cabernet" />
-            <label for="variety">Cabernet Sauvignon</label>
-          </div>
-          <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="syrah" />
-            <label for="variety">Syrah</label>
-          </div>
-          <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="merlot" />
-            <label for="variety">Merlot</label>
-          </div>
-          <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="chardonnay" />
-            <label for="variety">Chardonnay</label>
-          </div>
         </section>
         <!-- EXTRA-TEXTAREA -->
         <section class="form_section">
