fet: add min and max number input

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <h1 id="title" class="header__title">Andes Restaurant</h1>
       <span class="header__span">by Catena Zapata</span>
-      <p>Please book your place</p>
+      <p id="description">Please book your place</p>
     </header>
     <!-- FORM -->
     <form class="form" action="">
@@ -31,7 +31,7 @@
         <!-- AGE -->
         <section class="form_section">
           <label class="form_section__label" class="form_section__label" for="age">Age</label>
-          <input class="form_section__input" type="number" name="age" id="age" />
+          <input class="form_section__input" type="number" name="age" id="age" min="18" max="100" />
         </section>
         <!-- VEGETARIAN-RADIO -->
         <section class="form_section">
