fix: checkbox mistake

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- FORM -->
     <form class="form" action="">
-      <!-- ----------------------LEFT SIDE---------------------- -->
+      
       <div class="container-left">
         <!-- NAME -->
         <section class="form_section">
@@ -49,8 +49,8 @@
         <section class="form_section">
           <label class="form_section__label">Choose your favourites varieties</label>
           <div class="container-check">
-            <input type="checkbox" name="variety" id="variety" value="malbcec" />
-            <label for="variety">Malbcec</label>
+            <input type="checkbox" name="variety" id="variety" value="malbec" />
+            <label for="variety">Malbec</label>
           </div>
           <div class="container-check">
             <input type="checkbox" name="variety" id="variety" value="cabernet" />
@@ -70,7 +70,7 @@
           </div>
         </section>
       </div>
-      <!-- ----------------------RIGHT SIDE---------------------- -->
+    
       <!-- EMAIL -->
       <div class="container-right">
         <section class="form_section">
